syntax="proto3";// syntax of the proto file (current version is 3)
package proto.chat; // package where we will generate the file

option java_multiple_files = true; // use multiple file for each object instead of one big file

message ChatMessage {
  string from = 1;
  string to = 2;
  string msg = 3;
  string time = 4;
}

message Empty {}

message MessageRequest{
  ChatMessage chatMessage = 1;
}

service ChatService {
  rpc sendMsg(MessageRequest) returns (Empty) {}
  rpc receiveMsg(Empty) returns (stream ChatMessage) {}
}